--- a/app/index.html
+++ b/app/index.html
@@ -164,6 +164,7 @@
 <script src="js/directives/addToOrderSpecs.js" data-group="source"></script>
 <script src="js/directives/imageonload.js" data-group="source"></script>
 <script src=" js/controllers/customemailfield.js" data-group="source"></script>
+<script src="js/controllers/awaitingApprovalCtrl.js" data-group="source"></script>
 
 
 </body>
